--- a/selectstars/src/components/AllMentorsList/allMentors.css
+++ b/selectstars/src/components/AllMentorsList/allMentors.css
@@ -1,48 +1,39 @@
 
-.allMentors-page .background-image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
-    background-size: cover;
-    background-position: center;
-
-}
-.allMentors-page .background-image::after {
-    position: absolute;
-    content: " ";
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-color: #8246AF;
-    background-size: cover;
-    background-position: center;
-    opacity: calc(25%);
-
-}
-
-.allMentorsPage-title h1 {
-    font-size: 42px;
-    color: #F5F5F5;
-    text-align: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-
-.allMentorSection {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
-    justify-content: center;
-    padding: 0 5%;
-    /* background-color: #8246AF; */
+    .allMentors-page {
+        background-color: #8246AF;
+        padding-bottom: 20%;
     }
 
-
-@media screen and (max-width: 480px) {
-    form {
-        max-width: 100%;
+    .allMentorsPage-title h1 {
+        font-size: 42px;
+        color: #F5F5F5;
+        text-align: center;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
-} 
+    .allMentorSection{
 
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 20px;
+        justify-content: center;
+        padding: 0 5%;
+        }
+        .allMentorCard {
+        flex-basis: 10%;
+        }
+    @media screen and (max-width: 480px) {
+        form {
+            max-width: 100%;
+        }
+    }
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
