--- a/selectstars/src/components/MentorCard/card.css
+++ b/selectstars/src/components/MentorCard/card.css
@@ -1,34 +1,38 @@
 .mentorProfile_card{
-    width: 30%;
+    width: 100%;
     height: auto;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     padding: 2%;
     margin: 1em;
-    color: #8246ae;
     cursor: pointer;
     box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
     transition: all ease 200ms;
 }
-
-
 .mentorProfile_card img {
-    width: 30%;
+    width: 200px;
+    height: 200px;
+    object-fit: scale-down;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.mentorProfile_card .mentorname {
+    font-size: 24px;
+}
+.mentorProfile_card a{
+    text-decoration: none;
 }
 
-.mentorProfile_card {
-    margin: 20px;
-    padding: 5px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: space-around;
-    
+.mentorProfile_card h3 {
+    font-size: 18px;
+    margin-bottom: 5px;
+    color: black;
 }
 
-.mentorProfile_card h3 {  
-    font-size: 15px;
-    text-decoration: #8246ae;
-}
+
+
+
+
+
