--- a/selectstars/src/components/CreateEventForm/createEventForm.css
+++ b/selectstars/src/components/CreateEventForm/createEventForm.css
@@ -9,28 +9,6 @@
     padding-bottom: 30px;
 }
 
-/* .event-page .background-image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
-    background-size: cover;
-    background-position: center;
-} */
-
-/* .event-page .background-image::after {
-    position: absolute;
-    content: " ";
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-color: #8246AF;
-    background-size: cover;
-    background-position: center;
-    opacity: calc(25%);
-} */
-
 .event-page h1 {
     color: #F5F5F5;
     text-align: center;
@@ -58,7 +36,7 @@
     align-items: flex-end;
 }
 
-.eventField label,select {
+.eventField label {
     display: inline-block;
     clear: left;
     width: 250px;
@@ -80,19 +58,18 @@
     background-color: white;
 }
 
-select{
-    margin: 10px;
-    display: block;
-    width: 100vh;
+.eventField select {
+
+    display: inline-block;
+    width: 102%;
     border: none;
     border-radius: 5px;
     padding: 1;
     font-size: 16px;
     color: #333;
     background-color: white;
-    text-align: center;
     height: 60px;
-    font-weight: normal
+    text-align: center;
 
 }
 
