--- a/selectstars/src/components/MentorCard/card.css
+++ b/selectstars/src/components/MentorCard/card.css
@@ -1,4 +1,4 @@
-.mentorProfile_card{
+.mentorProfile_card {
     width: 100%;
     height: auto;
     background-color: #fff;
@@ -10,6 +10,7 @@
     box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
     transition: all ease 200ms;
 }
+
 .mentorProfile_card img {
     width: 200px;
     height: 200px;
@@ -18,10 +19,12 @@
     margin-left: auto;
     margin-right: auto;
 }
+
 .mentorProfile_card .mentorname {
     font-size: 24px;
 }
-.mentorProfile_card a{
+
+.mentorProfile_card a {
     text-decoration: none;
 }
 
@@ -31,8 +34,9 @@
     color: black;
 }
 
+@media screen and (max-width: 480px) {
+    .mentorProfile_card {
+        width: auto;
+    }
 
-
-
-
-
+}
