--- a/selectstars/src/components/EventCard/EventCard.css
+++ b/selectstars/src/components/EventCard/EventCard.css
@@ -38,3 +38,20 @@
     margin-bottom: 5px;
     font-size: 14px;
 }
+
+.event-card .Assign-Mentor button[type="submit"] {
+    display: block;
+    margin: 0 auto;
+    width: 50%;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #8246ae;
+    cursor: pointer;
+}
+
+.event-card .Assign-Mentor button[type="submit"]:hover {
+    background-color: #f3279a;
+}
