--- a/selectstars/src/components/EventCard/EventCard.css
+++ b/selectstars/src/components/EventCard/EventCard.css
@@ -46,10 +46,16 @@
     border: none;
     border-radius: 5px;
     padding: 10px;
+    margin-top: 5%;
+    margin-bottom: 5%;
     font-size: 16px;
     color: #fff;
     background-color: #8246ae;
     cursor: pointer;
+
+}
+.event-card .Assign-Mentor a {
+    text-decoration: none;
 }
 
 .event-card .Assign-Mentor:hover button {
