--- a/selectstars/src/components/ChangePassword/changePasswordForm.css
+++ b/selectstars/src/components/ChangePassword/changePasswordForm.css
@@ -4,6 +4,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
+
 .change-password-background {
     position: absolute;
     width: 100%;
@@ -25,6 +26,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .field_container {
